change Title in browsers as useEffect

--- a/package.json
+++ b/package.json
@@ -36,5 +36,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-use": "^17.3.1"
   }
 }
