spelling + add nonfunctinal helper

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Jiro's Reddit App",
+  "name": "De 15 populairste reddit posts - routing voorbeeld project.",
   "icons": [
     {
       "src": "favicon.ico",
